[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Sheet/Character_Sheet.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
bg_color = Color( 0.921569, 0.741176, 0.560784, 1 )
border_color = Color( 0.921569, 0.741176, 0.560784, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.800293, 0.650238, 0.500183, 1 )
border_width_left = 10
border_width_right = 10
border_color = Color( 0.8, 0.65098, 0.501961, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color( 0.694118, 0.34902, 0.00784314, 0.458824 )
shadow_size = 1

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.921569, 0.741176, 0.560784, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.705882, 0.392157, 0.0784314, 0.564706 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.227451, 0.223529, 0.223529, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 499, 28.75 )

[node name="Character_Sheet" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -300.0
margin_right = 500.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="Node2D" type="Node2D" parent="CanvasLayer"]
position = Vector2( 639.388, 400 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
margin_left = 207.0
margin_top = 60.0
margin_right = 1139.0
margin_bottom = 122.0
focus_mode = 2
mouse_default_cursor_shape = 13
color = Color( 0.647059, 0.321569, 0.145098, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.992188, 0.887543, 0.782898, 1 )

[node name="SheetArea" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="Sheet_Exit" type="Button" parent="ColorRect/SheetArea"]
margin_right = 35.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterBaseArea" type="HBoxContainer" parent="ColorRect/SheetArea"]
margin_top = 24.0
margin_right = 960.0
margin_bottom = 66.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName_BoxC" type="VBoxContainer" parent="ColorRect/SheetArea/CharacterBaseArea"]
margin_right = 317.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_Name_Description" type="Label" parent="ColorRect/SheetArea/CharacterBaseArea/CharacterName_BoxC"]
margin_right = 317.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Character Name"
align = 1

[node name="Character_Name" type="LineEdit" parent="ColorRect/SheetArea/CharacterBaseArea/CharacterName_BoxC"]
margin_top = 18.0
margin_right = 317.0
margin_bottom = 42.0

[node name="CharacterRace_BoxC" type="VBoxContainer" parent="ColorRect/SheetArea/CharacterBaseArea"]
margin_left = 321.0
margin_right = 638.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_Race_Description" type="Label" parent="ColorRect/SheetArea/CharacterBaseArea/CharacterRace_BoxC"]
margin_right = 317.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Race"
align = 1

[node name="Character_Race" type="LineEdit" parent="ColorRect/SheetArea/CharacterBaseArea/CharacterRace_BoxC"]
margin_top = 18.0
margin_right = 317.0
margin_bottom = 42.0

[node name="CharacterClass_BoxC" type="VBoxContainer" parent="ColorRect/SheetArea/CharacterBaseArea"]
margin_left = 642.0
margin_right = 960.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterClass_Description" type="Label" parent="ColorRect/SheetArea/CharacterBaseArea/CharacterClass_BoxC"]
margin_right = 318.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Class"
align = 1

[node name="Character_Class" type="LineEdit" parent="ColorRect/SheetArea/CharacterBaseArea/CharacterClass_BoxC"]
margin_top = 18.0
margin_right = 318.0
margin_bottom = 42.0

[node name="Sheet_TabContainer" type="TabContainer" parent="ColorRect/SheetArea"]
margin_top = 70.0
margin_right = 960.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_bg = Color( 0, 0, 0, 1 )
custom_colors/font_color_fg = Color( 0, 0, 0, 1 )
custom_styles/tab_fg = SubResource( 1 )
custom_styles/tab_bg = SubResource( 2 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Core Stats" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 25.0
margin_right = -1.0
margin_bottom = -1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats"]
margin_right = 192.0
margin_bottom = 200.0
size_flags_horizontal = 0

[node name="Score_&_Mod" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer"]
margin_right = 192.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Core_Stats" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod"]
margin_right = 192.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 4 )
text = "Core Stats"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod"]
margin_top = 18.0
margin_right = 192.0
margin_bottom = 200.0

[node name="Attributes_Column" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer"]
margin_right = 29.0
margin_bottom = 182.0

[node name="Align_Space" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Attributes_Column"]
margin_right = 29.0
margin_bottom = 14.0
size_flags_vertical = 1

[node name="STR" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Attributes_Column"]
margin_top = 18.0
margin_right = 29.0
margin_bottom = 42.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "STR"
align = 1
valign = 1

[node name="DEX" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Attributes_Column"]
margin_top = 46.0
margin_right = 29.0
margin_bottom = 70.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DEX"
align = 1
valign = 1

[node name="CON" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Attributes_Column"]
margin_top = 74.0
margin_right = 29.0
margin_bottom = 98.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CON"
align = 1
valign = 1

[node name="INT" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Attributes_Column"]
margin_top = 102.0
margin_right = 29.0
margin_bottom = 126.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "INT"
align = 1
valign = 1

[node name="WIS" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Attributes_Column"]
margin_top = 130.0
margin_right = 29.0
margin_bottom = 154.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "WIS"
align = 1
valign = 1

[node name="CHA" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Attributes_Column"]
margin_top = 158.0
margin_right = 29.0
margin_bottom = 182.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CHA"
align = 1
valign = 1

[node name="Score_Column" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer"]
margin_left = 33.0
margin_right = 91.0
margin_bottom = 182.0

[node name="Score_Description" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Score_Column"]
margin_right = 58.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STR_Input" type="LineEdit" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Score_Column"]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 42.0
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEX_Input" type="LineEdit" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Score_Column"]
margin_top = 46.0
margin_right = 58.0
margin_bottom = 70.0
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CON_Input" type="LineEdit" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Score_Column"]
margin_top = 74.0
margin_right = 58.0
margin_bottom = 98.0
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="INT_Input" type="LineEdit" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Score_Column"]
margin_top = 102.0
margin_right = 58.0
margin_bottom = 126.0
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WIS_Input" type="LineEdit" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Score_Column"]
margin_top = 130.0
margin_right = 58.0
margin_bottom = 154.0
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CHA_Input" type="LineEdit" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Score_Column"]
margin_top = 158.0
margin_right = 58.0
margin_bottom = 182.0
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mod_Column" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer"]
margin_left = 95.0
margin_right = 123.0
margin_bottom = 182.0

[node name="Mod_Description" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Mod_Column"]
margin_right = 28.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mod"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STR_Mod_Value" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Mod_Column"]
margin_top = 18.0
margin_right = 28.0
margin_bottom = 42.0
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEX_Mod_Value" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Mod_Column"]
margin_top = 46.0
margin_right = 28.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CON_Mod_Value" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Mod_Column"]
margin_top = 74.0
margin_right = 28.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="INT_Mod_Value" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Mod_Column"]
margin_top = 102.0
margin_right = 28.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WIS_Mod_Value" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Mod_Column"]
margin_top = 130.0
margin_right = 28.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CHA_Mod_Value" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/Mod_Column"]
margin_top = 158.0
margin_right = 28.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveRoll_Column" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer"]
margin_left = 127.0
margin_right = 192.0
margin_bottom = 182.0

[node name="Save_Roll_Description" type="Label" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/SaveRoll_Column"]
margin_right = 65.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Save"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STR_Save_Roll" type="Button" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/SaveRoll_Column"]
margin_top = 18.0
margin_right = 65.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SaveRoll"

[node name="DEX_Save_Roll" type="Button" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/SaveRoll_Column"]
margin_top = 46.0
margin_right = 65.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SaveRoll"

[node name="CON_Save_Roll" type="Button" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/SaveRoll_Column"]
margin_top = 74.0
margin_right = 65.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SaveRoll"

[node name="INT_Save_Roll" type="Button" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/SaveRoll_Column"]
margin_top = 102.0
margin_right = 65.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SaveRoll"

[node name="WIS_Save_Roll" type="Button" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/SaveRoll_Column"]
margin_top = 130.0
margin_right = 65.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SaveRoll"

[node name="CHA_Save_Roll" type="Button" parent="ColorRect/SheetArea/Sheet_TabContainer/Core Stats/HBoxContainer/Score_&_Mod/HBoxContainer/SaveRoll_Column"]
margin_top = 158.0
margin_right = 65.0
margin_bottom = 182.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SaveRoll"

[node name="Skills" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 25.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Background" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 25.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Class" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 25.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Weapons" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 25.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Spellbook" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 25.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Armour" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 25.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Inventory" type="VBoxContainer" parent="ColorRect/SheetArea/Sheet_TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 25.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Area2D" type="Area2D" parent="ColorRect/SheetArea/Sheet_TabContainer"]
visible = false
position = Vector2( 479, -70 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/SheetArea/Sheet_TabContainer/Area2D"]
position = Vector2( 0, 7.75 )
shape = SubResource( 5 )

[connection signal="button_up" from="ColorRect/SheetArea/Sheet_Exit" to="." method="_on_Sheet_Exit_button_up"]
